Show Shows marked with "NEU", Show Shows from Navi as own menu item

--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -23,4 +23,5 @@
   <string id="30102">View erzwingen</string>
   <string id="30201">Allgemein</string>
   <string id="30202">Sender</string>
+  <string id="30203">Sendungen A-Z</string>
 </strings>
