--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -30,4 +30,5 @@
   <string id="30103">ViewID</string>
   <string id="30201">General</string>
   <string id="30202">Channels</string>
+  <string id="30203">Shows A-Z</string>
 </strings>
